arg stuff, new progress bar loader