@@ -8,6 +8,15 @@ group = "com.github.kinetic.logthing"
 version = "1.0-DEV"
 
 val logThingMainClass = "com.github.kinetic.logthing.Start"
+val kotlinVersion = "2.3.0-Beta1"
+val jvmArgsList = listOf(
+    "-XX:+IgnoreUnrecognizedVMOptions",
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+    "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
+    "--sun-misc-unsafe-memory-access=allow"
+)
 
 repositories {
     mavenCentral()
@@ -15,10 +24,10 @@ repositories {
 
 dependencies {
     implementation("com.google.code.gson:gson:2.10.1")
-    implementation("org.jetbrains.kotlin:kotlin-scripting-jsr223:2.2.0")
-    implementation("org.jetbrains.kotlin:kotlin-scripting-common:2.2.0")
-    implementation("org.jetbrains.kotlin:kotlin-scripting-jvm:2.2.0")
-    implementation("org.jetbrains.kotlin:kotlin-scripting-jvm-host:2.2.0")
+    implementation("org.jetbrains.kotlin:kotlin-scripting-jsr223:$kotlinVersion")
+    implementation("org.jetbrains.kotlin:kotlin-scripting-common:$kotlinVersion")
+    implementation("org.jetbrains.kotlin:kotlin-scripting-jvm:$kotlinVersion")
+    implementation("org.jetbrains.kotlin:kotlin-scripting-jvm-host:$kotlinVersion")
     implementation(platform("org.jetbrains.kotlin:kotlin-bom"))
     implementation("org.jetbrains.kotlin:kotlin-stdlib")
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
@@ -28,14 +37,12 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs(jvmArgsList)
 }
 
 application {
     mainClass.set(logThingMainClass)
-    applicationDefaultJvmArgs = listOf(
-        "--add-opens", "java.base/sun.misc=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-    )
+    applicationDefaultJvmArgs = jvmArgsList
 }
 
 java {
@@ -56,10 +63,7 @@ tasks.withType<JavaCompile> {
 }
 
 tasks.withType<JavaExec> {
-    jvmArgs(
-        "--add-opens", "java.base/sun.misc=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-    )
+    jvmArgs(jvmArgsList)
 }
 
 tasks.register<Copy>("copyDependencies") {
@@ -77,8 +81,5 @@ tasks.register<JavaExec>("logThingRun") {
     mainClass.set(logThingMainClass)
     classpath = sourceSets["main"].runtimeClasspath
     workingDir = file("env")
-    jvmArgs(
-        "--add-opens", "java.base/sun.misc=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-    )
+    jvmArgs(jvmArgsList)
 }
